--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
+  - python=3
   - scikit-learn=0.23.*
   - matplotlib=3.3.*
+  - numpy
+  - pandas
   - pip:
       - tqdm=4.54.*
