ci: revert caching changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,33 +19,23 @@ workflow:
     - if: '$CI_COMMIT_BRANCH =~ /^doc\//'
       when: never
 
-variables:
-  CONDA_ENV_DIR: "cache/timeeval"
-  PIP_DIR: "cache/pip"
-
-cache:
-  paths:
-    - "$CONDA_ENV_DIR"
-    - "$PIP_DIR"
-
 before_script:
   - echo "Setting up conda environment and installing dependencies"
-  - conda env create --prefix $CONDA_ENV_DIR -f environment.yml
-  - source activate $CONDA_ENV_DIR
-  - export PIP_CACHE_DIR="${PIP_DIR}"
+  - conda env create -n timeeval -f environment.yml
+  - source activate timeeval
   - pip install -r requirements.dev
 
 test:
   stage: test
   interruptible: true
   script:
-#    - python setup.py typecheck
+    - python setup.py typecheck
     - python setup.py test
 
 build:
   stage: build
-#  only:
-#    - tags
+  only:
+    - tags
   script:
     - python setup.py sdist bdist_wheel
   artifacts:
@@ -55,7 +45,7 @@ build:
 
 deploy:
   stage: deploy
-#  only:
-#    - tags
+  only:
+    - tags
   script:
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url https://gitlab.hpi.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
