refactor: split dev and ci requirements
Split dependencies further:
- environment.yml has all dependencies required to run TimeEval
- requirements.ci contains all build-relevant dependencies  needed for CI
- requirements.dev contains all additional dependencies used during development in scripts and notebooks, e.g. jupyerlab (which is heavy and should not be installed in CI)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ before_script:
   - echo "Setting up conda environment and installing dependencies"
   - conda env create -n timeeval -f environment.yml
   - source activate timeeval
-  - pip install -r requirements.dev
+  - pip install -r requirements.ci
 
 test:
   stage: test
