--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Dask
+dask-worker-space
