refactor: some mypy adaptions

--- a/mypy.ini
+++ b/mypy.ini
@@ -14,3 +14,9 @@ ignore_missing_imports = True
 
 [mypy-tqdm.*]
 ignore_missing_imports = True
+
+[mypy-dask.distributed.*]
+ignore_missing_imports = True
+
+[mypy-distributed.client.*]
+ignore_missing_imports = True
