--- a/mypy.ini
+++ b/mypy.ini
@@ -20,3 +20,6 @@ ignore_missing_imports = True
 
 [mypy-distributed.client.*]
 ignore_missing_imports = True
+
+[mypy-docker.*]
+ignore_missing_imports = True
