feat: timout for DockerAdapter

--- a/mypy.ini
+++ b/mypy.ini
@@ -20,3 +20,7 @@ ignore_missing_imports = True
 
 [mypy-docker.*]
 ignore_missing_imports = True
+
+[mypy-durations.*]
+ignore_missing_imports = True
+
