--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - numpy=1.20.*
   - pandas
   - psutil
+  - statsmodels=0.12.*
   - pip:
       - tqdm==4.54.*
       - dask[distributed]==2021.1.*
