--- a/setup.cfg
+++ b/setup.cfg
@@ -53,3 +53,6 @@ ignore_missing_imports = True
 
 [mypy-prts.*]
 ignore_missing_imports = True
+
+[mypy-statsmodels.*]
+ignore_missing_imports = True
