--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ omit =
     timeeval/utils/concat_dataset.py
     timeeval/utils/convert2bin.py
     timeeval/utils/preprocess_dataset.py
+    **/__main__.py
 
 [coverage:report]
 exclude_lines =
