fix: typing errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,3 +57,6 @@ ignore_missing_imports = True
 
 [mypy-statsmodels.*]
 ignore_missing_imports = True
+
+[mypy-joblib.*]
+ignore_missing_imports = True
