--- a/environment.yml
+++ b/environment.yml
@@ -8,13 +8,14 @@ dependencies:
   - scikit-learn=0.23.*
   - matplotlib=3.3.*
   - numpy=1.20.*
-  - pandas
+  - pandas=1.3.*
   - psutil
   - statsmodels=0.12.*
   - pip:
       - tqdm==4.54.*
-      - dask[distributed]==2021.1.*
+      - dask[distributed]==2021.5.*
       - asyncssh==2.5.*
       - docker==4.4.*
       - durations==0.3.*
       - prts==1.0.0.3
+      - numpyencoder==0.3.*
