--- a/setup.cfg
+++ b/setup.cfg
@@ -60,3 +60,6 @@ ignore_missing_imports = True
 
 [mypy-joblib.*]
 ignore_missing_imports = True
+
+[mypy-numpyencoder.*]
+ignore_missing_imports = True
