--- a/timeeval_experiments/param-config.json
+++ b/timeeval_experiments/param-config.json
@@ -5,25 +5,27 @@
     }
   },
   "__heuristic_function_mapping": {
-    "dataset period size": "PeriodSizeHeuristic(factor=1, fb_value=100)",
     "1.5 dataset period size": "PeriodSizeHeuristic(factor=1.5, fb_value=150)",
-    "[0.5, 1.0, 1.5] * dataset period size": "EmbedDimRangeHeuristic(base_factor=1.5, base_fb_value=150, dim_factors=[0.5, 1.0, 1.5])",
     "1.5*window_size": "ParameterDependenceHeuristic(source_parameter='window_size', factor=1.5)",
-    "10% of dataset length or until first anomaly": "CleanStartSequenceSizeHeuristic(max_factor=0.1)",
     "10% of dataset length": "RelativeDatasetSizeHeuristic(factor=0.1)",
+    "10% of dataset length or until first anomaly": "CleanStartSequenceSizeHeuristic(max_factor=0.1)",
+    "[0.5, 1.0, 1.5] * dataset period size": "EmbedDimRangeHeuristic(base_factor=1.5, base_fb_value=150, dim_factors=[0.5, 1.0, 1.5])",
+    "dataset period size": "PeriodSizeHeuristic(factor=1, fb_value=100)",
     "max anomaly length": "AnomalyLengthHeuristic(agg_type='max')",
-    "min anomaly length": "AnomalyLengthHeuristic(agg_type='min')"
+    "min anomaly length": "AnomalyLengthHeuristic(agg_type='min')",
+    "dataset contamination": "ContaminationHeuristic()"
   },
   "dependent_params": {
     "anomaly_window_size": "max anomaly length",
     "embed_dim_range": "[0.5, 1.0, 1.5] * dataset period size",
+    "max_anomalies": "dataset contamination",
     "max_anomaly_window_size": "max anomaly length",
     "max_lag": "10% of dataset length",
     "min_anomaly_window_size": "min anomaly length",
     "n_init_train": "10% of dataset length or until first anomaly",
     "period": "dataset period size",
-    "window_size": "1.5 dataset period size",
-    "query_window_size": "1.5*window_size"
+    "query_window_size": "1.5*window_size",
+    "window_size": "1.5 dataset period size"
   },
   "fixed_params": {
     "activationThreshold": 12,
@@ -316,13 +318,13 @@
     ],
     "lstm_layers": {
       "DeepNAP": [
-        "[1; 3]"
+        "[1; 3; 10]"
       ],
       "EncDec-AD": [
-        "[1; 3]"
+        "[1; 3; 10]"
       ],
       "LSTM-AD": [
-        "[1; 3]"
+        "[1; 3; 10]"
       ]
     },
     "max_sign_change_distance": [
