--- a/timeeval_experiments/param-config.json
+++ b/timeeval_experiments/param-config.json
@@ -6,16 +6,15 @@
     "Torsk": {
       "transient_window_size": "heuristic:ParameterDependenceHeuristic(source_parameter='train_window_size', factor=0.2)"
     },
-    "XGBoost Regressor": {
-      "learning_rate": 0.1
-    },
     "XGBoosting (RR)": {
       "learning_rate": 0.1
     }
   },
   "__heuristic_function_mapping": {
-    "0.5 dataset period size": "PeriodSizeHeuristic(factor=0.5, fb_value=150)",
+    "0.5 dataset period size": "PeriodSizeHeuristic(factor=0.5, fb_value=50)",
+    "1.0 dataset period size": "PeriodSizeHeuristic(factor=1.0, fb_value=100)",
     "1.5 dataset period size": "PeriodSizeHeuristic(factor=1.5, fb_value=150)",
+    "2.0 dataset period size": "PeriodSizeHeuristic(factor=2.0, fb_value=200)",
     "1.5*window_size": "ParameterDependenceHeuristic(source_parameter='window_size', factor=1.5)",
     "10% of dataset length": "RelativeDatasetSizeHeuristic(factor=0.1)",
     "10% of dataset length or until first anomaly": "CleanStartSequenceSizeHeuristic(max_factor=0.1)",
@@ -36,7 +35,12 @@
     "neighbourhood_size": "0.5 dataset period size",
     "period": "dataset period size",
     "query_window_size": "1.5*window_size",
-    "window_size": "1.5 dataset period size"
+    "window_size": [
+      "0.5 dataset period size",
+      "1.0 dataset period size",
+      "1.5 dataset period size",
+      "2.0 dataset period size"
+    ]
   },
   "fixed_params": {
     "activationThreshold": 12,
@@ -67,6 +71,7 @@
     "img_size": 64,
     "initialPerm": 0.21,
     "inputWidth": 2048,
+    "iter_batch_size": 500,
     "iterations": 25,
     "kernel_size": "default",
     "l2_reg": 0.0001,
@@ -121,6 +126,7 @@
     "start_level": 3,
     "store_precision": true,
     "stride": 1,
+    "support_fraction": "default",
     "svd_solver": "auto",
     "synPermActiveInc": 0.1,
     "synPermConnected": 0.1,
@@ -159,10 +165,13 @@
       "HBOS": [
         "[0; 1]"
       ],
-      "Isolation Forest - Local Outier Factor": [
+      "IF-LOF": [
         "[0; 1]"
       ],
       "NumentaHTM": [
+        "[0; 1]"
+      ],
+      "SAND": [
         "[0; 1]"
       ],
       "SSA": [
@@ -170,7 +179,7 @@
       ]
     },
     "alphabet_size": {
-      "GrammarViz3": [
+      "GrammarViz": [
         "[3; 10]"
       ],
       "HOT SAX": [
@@ -193,25 +202,25 @@
       "[\"gbtree\", \"gblinear\", \"dart\"]"
     ],
     "bootstrap": {
-      "Isolation Forest": [
+      "Isolation Forest (iForest)": [
         "[True, False]"
       ],
-      "Random Black Forest Regressor": [
+      "Random Black Forest (RR)": [
         "[True, False]"
       ],
-      "Random Forest Regressor": [
+      "Random Forest Regressor (RR)": [
         "[True, False]"
       ],
-      "Subsequence Isolation Forest": [
+      "Subsequence IF": [
         "[True, False]"
       ]
     },
     "coef0": {
       "NoveltySVR": [
-        "[0; 1; 10; 100]"
+        "[0, 1, 10, 100]"
       ],
       "PhaseSpace-SVM": [
-        "[0; 1; 10; 100]"
+        "[0, 1, 10, 100]"
       ]
     },
     "compression_ratio": [
@@ -280,13 +289,13 @@
       "[0.0001, 0.001, 0.01, 0.1]"
     ],
     "latent_size": {
-      "AutoEncoder": [
+      "AutoEncoder (AE)": [
         "=+/- 30%"
       ],
       "Bagel": [
         "=+/- 30%"
       ],
-      "DenoisingAutoEncoder": [
+      "DenoisingAutoEncoder (DAE)": [
         "=+/- 30%"
       ],
       "Donut": [
@@ -296,6 +305,9 @@
         "=+/- 30%"
       ],
       "ImageEmbeddingCAE": [
+        "=+/- 30%"
+      ],
+      "LSTM-VAE": [
         "=+/- 30%"
       ],
       "MTAD-GAT": [
@@ -330,13 +342,16 @@
     ],
     "lstm_layers": {
       "DeepNAP": [
-        "[1; 3; 10]"
+        "[1, 3, 10]"
       ],
       "EncDec-AD": [
-        "[1; 3; 10]"
+        "[1, 3, 10]"
       ],
       "LSTM-AD": [
-        "[1; 3; 10]"
+        "[1, 3, 10]"
+      ],
+      "LSTM-VAE": [
+        "[1, 3, 10]"
       ]
     },
     "max_sign_change_distance": [
@@ -361,7 +376,7 @@
       "[0, 0.1, 0.13, 0.2, 0.3, 0.4, 0.5]"
     ],
     "paa_transform_size": {
-      "GrammarViz3": [
+      "GrammarViz": [
         "[3; 20]"
       ],
       "HOT SAX": [
@@ -393,6 +408,9 @@
     ],
     "rnn_hidden_size": {
       "DeepNAP": [
+        "[100; 1000]"
+      ],
+      "LSTM-VAE": [
         "[100; 1000]"
       ],
       "OmniAnomaly": [
@@ -500,7 +518,7 @@
     "mag_window_size": {
       "algorithms": [
         "MTAD-GAT",
-        "SR"
+        "Spectral Residual (SR)"
       ],
       "search_space": [
         28,
@@ -525,7 +543,8 @@
       "algorithms": [
         "CBLOF",
         "DBStream",
-        "KMeans"
+        "k-Means",
+        "SAND"
       ],
       "search_space": [
         5,
@@ -537,10 +556,10 @@
     },
     "n_estimators": {
       "algorithms": [
-        "EnsembleGI",
-        "XGBoost Regressor",
-        "Hybrid-KNN",
-        "Random Black Forest Regressor"
+        "Ensemble GI",
+        "XGBoosting (RR)",
+        "Hybrid KNN",
+        "Random Black Forest (RR)"
       ],
       "search_space": [
         10,
@@ -551,8 +570,8 @@
     "n_neighbors": {
       "algorithms": [
         "COF",
-        "Hybrid-KNN",
-        "Isolation Forest - Local Outier Factor",
+        "Hybrid KNN",
+        "IF-LOF",
         "KNN",
         "LOF",
         "Subsequence LOF"
@@ -568,14 +587,14 @@
     },
     "n_trees": {
       "algorithms": [
-        "Extended Isolation Forest",
-        "Random Forest Regressor",
-        "XGBoost Regressor",
-        "HIF",
-        "Isolation Forest - Local Outier Factor",
-        "Isolation Forest",
-        "Random Black Forest Regressor",
-        "Subsequence Isolation Forest"
+        "Extended Isolation Forest (EIF)",
+        "Random Forest Regressor (RR)",
+        "XGBoosting (RR)",
+        "Hybrid Isolation Forest (HIF)",
+        "IF-LOF",
+        "Isolation Forest (iForest)",
+        "Random Black Forest (RR)",
+        "Subsequence IF"
       ],
       "search_space": [
         10,
@@ -601,7 +620,7 @@
     "score_window_size": {
       "algorithms": [
         "MTAD-GAT",
-        "SR"
+        "Spectral Residual (SR)"
       ],
       "search_space": [
         28,
@@ -611,14 +630,14 @@
     },
     "train_window_size": {
       "algorithms": [
-        "Random Forest Regressor",
-        "XGBoost Regressor",
+        "Random Forest Regressor (RR)",
+        "XGBoosting (RR)",
         "NoveltySVR",
         "OceanWNN",
-        "Random Black Forest Regressor",
+        "Random Black Forest (RR)",
         "SARIMA",
         "Torsk",
-        "TripleES"
+        "Triple ES (Holt-Winter's)"
       ],
       "search_space": [
         50,
