fix: type errors in algorithm stubs and duplicated test

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,3 +63,6 @@ ignore_missing_imports = True
 
 [mypy-numpyencoder.*]
 ignore_missing_imports = True
+
+[mypy-scipy.*]
+ignore_missing_imports = True
