--- a/timeeval_experiments/param-config.json
+++ b/timeeval_experiments/param-config.json
@@ -11,27 +11,28 @@
     }
   },
   "__heuristic_function_mapping": {
+    "+30% default value": "DefaultFactorHeuristic(factor=1.3)",
+    "-30% default value": "DefaultFactorHeuristic(factor=0.7)",
     "0.5 dataset period size": "PeriodSizeHeuristic(factor=0.5, fb_value=50)",
     "1.0 dataset period size": "PeriodSizeHeuristic(factor=1.0, fb_value=100)",
     "1.5 dataset period size": "PeriodSizeHeuristic(factor=1.5, fb_value=150)",
-    "2.0 dataset period size": "PeriodSizeHeuristic(factor=2.0, fb_value=200)",
     "1.5*window_size": "ParameterDependenceHeuristic(source_parameter='window_size', factor=1.5)",
     "10% of dataset length": "RelativeDatasetSizeHeuristic(factor=0.1)",
     "10% of dataset length or until first anomaly": "CleanStartSequenceSizeHeuristic(max_factor=0.1)",
+    "2.0 dataset period size": "PeriodSizeHeuristic(factor=2.0, fb_value=200)",
+    "20% of train_window_size": "ParameterDependenceHeuristic(source_parameter='train_window_size', factor=0.2)",
     "[0.5, 1.0, 1.5] * dataset period size": "EmbedDimRangeHeuristic(base_factor=1.5, base_fb_value=150, dim_factors=[0.5, 1.0, 1.5])",
     "dataset contamination": "ContaminationHeuristic()",
     "dataset period size": "PeriodSizeHeuristic(factor=1, fb_value=100)",
-    "max anomaly length": "AnomalyLengthHeuristic(agg_type='max')",
-    "min anomaly length": "AnomalyLengthHeuristic(agg_type='min')",
     "default value": "DefaultFactorHeuristic()",
-    "-30% default value": "DefaultFactorHeuristic(factor=0.7)",
-    "+30% default value": "DefaultFactorHeuristic(factor=1.3)",
-    "e-3 default value": "DefaultExponentialFactorHeuristic(exponent=-3)",
-    "e-2 default value": "DefaultExponentialFactorHeuristic(exponent=-2)",
-    "e-1 default value": "DefaultExponentialFactorHeuristic(exponent=-1)",
     "e+1 default value": "DefaultExponentialFactorHeuristic(exponent=+1)",
     "e+2 default value": "DefaultExponentialFactorHeuristic(exponent=+2)",
-    "e+3 default value": "DefaultExponentialFactorHeuristic(exponent=+3)"
+    "e+3 default value": "DefaultExponentialFactorHeuristic(exponent=+3)",
+    "e-1 default value": "DefaultExponentialFactorHeuristic(exponent=-1)",
+    "e-2 default value": "DefaultExponentialFactorHeuristic(exponent=-2)",
+    "e-3 default value": "DefaultExponentialFactorHeuristic(exponent=-3)",
+    "max anomaly length": "AnomalyLengthHeuristic(agg_type='max')",
+    "min anomaly length": "AnomalyLengthHeuristic(agg_type='min')"
   },
   "dependent_params": {
     "anomaly_window_size": "max anomaly length",
@@ -44,6 +45,7 @@
     "neighbourhood_size": "0.5 dataset period size",
     "period": "dataset period size",
     "query_window_size": "1.5*window_size",
+    "transient_window_size": "20% of train_window_size",
     "window_size": [
       "0.5 dataset period size",
       "1.0 dataset period size",
@@ -156,345 +158,535 @@
   },
   "optimized_params": {
     "C": [
-      "[0.001, 0.01, 0.1, 1.0, 10.0, 100.0]"
+      0.01,
+      0.1,
+      1.0,
+      10.0,
+      100.0
     ],
     "activation": [
-      "[\"tanh\", \"sigmoid\"]"
+      "tanh",
+      "sigmoid"
     ],
     "alert": [
-      "[True, False]"
+      true,
+      false
     ],
     "alpha": {
-      "CBLOF": [
-        "[0; 1]"
-      ],
-      "DBStream": [
-        "[0; 1]"
-      ],
-      "HBOS": [
-        "[0; 1]"
-      ],
-      "IF-LOF": [
-        "[0; 1]"
-      ],
-      "NumentaHTM": [
-        "[0; 1]"
-      ],
-      "SAND": [
-        "[0; 1]"
-      ],
-      "SSA": [
-        "[0; 1]"
-      ]
+      "CBLOF": "MANUAL",
+      "DBStream": "MANUAL",
+      "HBOS": "MANUAL",
+      "IF-LOF": "MANUAL",
+      "NumentaHTM": "MANUAL",
+      "SAND": "MANUAL",
+      "SSA": "MANUAL"
     },
     "alphabet_size": {
       "GrammarViz": [
-        "[3; 10]"
+        3,
+        4,
+        5,
+        6
       ],
       "HOT SAX": [
-        "[3; 10]"
+        3,
+        4,
+        5,
+        6
       ],
       "TARZAN": [
-        "[3; 10]"
+        3,
+        4,
+        5,
+        6
       ],
       "TSBitmap": [
-        "[3; 10]"
+        3,
+        4,
+        5,
+        6
       ]
     },
     "beta": [
-      "[3, 5, 7]"
+      3,
+      5,
+      7
     ],
     "bin_tol": [
-      "[0.35, 0.5, 0.65]"
+      0.35,
+      0.5,
+      0.65
     ],
     "booster": [
-      "[\"gbtree\", \"gblinear\", \"dart\"]"
+      "gbtree",
+      "gblinear",
+      "dart"
     ],
     "bootstrap": {
       "Isolation Forest (iForest)": [
-        "[True, False]"
+        true,
+        false
       ],
       "Random Black Forest (RR)": [
-        "[True, False]"
+        true,
+        false
       ],
       "Random Forest Regressor (RR)": [
-        "[True, False]"
+        true,
+        false
       ],
       "Subsequence IF": [
-        "[True, False]"
+        true,
+        false
       ]
     },
     "coef0": {
       "NoveltySVR": [
-        "[0, 1, 10, 100]"
+        0,
+        1,
+        10,
+        100
       ],
       "PhaseSpace-SVM": [
-        "[0, 1, 10, 100]"
+        0,
+        1,
+        10,
+        100
       ]
     },
     "compression_ratio": [
-      "[1, 2, 3, 5, 8, 9, 10]"
+      1,
+      2,
+      3,
+      5
     ],
     "connectivity": [
-      "[0.1, 0.2, 0.25, 0.3, 0.4, 0.5]"
+      0.1,
+      0.25,
+      0.4
     ],
     "degree": {
       "NoveltySVR": [
-        "[1; 5]"
+        2,
+        3,
+        4
       ],
       "PhaseSpace-SVM": [
-        "[1; 5]"
+        2,
+        3,
+        4
       ]
     },
     "density": [
-      "[0.1, 0.05, 0.01]"
+      0.1,
+      0.05,
+      0.01
     ],
     "differencing_degree": [
-      "[0, 1, 2]"
+      0,
+      1,
+      2
     ],
     "discretizer": [
-      "[\"sugeno\", \"choquet\", \"fcm\"]"
+      "sugeno",
+      "choquet",
+      "fcm"
     ],
     "distillation_iterations": [
-      "[10, 20, 50, 100]"
+      10,
+      20,
+      50,
+      100
     ],
     "ep": [
-      "[1, 3, 5]"
+      1,
+      3,
+      5
     ],
     "epsilon": [
-      "[0.0001; 0.001, 0.01, 0.1]"
+      0.0001,
+      0.001,
+      0.01,
+      0.1
     ],
     "error_buffer": [
-      "[50, 100, 500, 1000]"
+      50,
+      100,
+      500
     ],
     "feature_window_size": [
-      "[50, 100, 300, 500, 1000]"
+      50,
+      100,
+      500
     ],
     "fft_parameters": [
-      "[1, 2, 3, 5, 7]"
+      1,
+      2,
+      3,
+      5,
+      7
     ],
     "gamma": [
-      "[0.5, 0.8, 1]"
+      0.5,
+      0.8,
+      1
     ],
     "gap_time": [
-      "[7, 10, 13]"
+      7,
+      10,
+      13
     ],
     "imed_loss": [
-      "[True, False]"
+      true,
+      false
     ],
     "input_map_scale": [
-      "[0.01, 0.1, 0.125, 0.25, 0.5, 1]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "input_map_size": [
-      "[50, 100, 200, 500, 1000]"
+      50,
+      100,
+      500
     ],
     "kernel": [
-      "[\"linear\", \"poly\", \"rbf\", \"sigmoid\", \"rbf-gaussian\", \"rbf-exp\"]"
+      "linear",
+      "poly",
+      "rbf",
+      "sigmoid",
+      "rbf-gaussian",
+      "rbf-exp"
     ],
     "lag_window_size": [
-      "[50, 100, 300, 500, 1000]"
+      50,
+      300,
+      500
     ],
     "lambda": [
-      "[0.0001, 0.001, 0.01, 0.1]"
+      0.0001,
+      0.001,
+      0.01,
+      0.1
     ],
     "latent_size": {
       "AutoEncoder (AE)": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "Bagel": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "DenoisingAutoEncoder (DAE)": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "Donut": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "EncDec-AD": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "ImageEmbeddingCAE": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "LSTM-VAE": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "MTAD-GAT": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "OmniAnomaly": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ]
     },
     "lead_window_size": [
-      "[10, 50, 100, 200, 500, 1000]"
+      10,
+      200,
+      500
     ],
     "level_size": [
-      "[2, 3, 5]"
+      2,
+      3,
+      5
     ],
     "linear_hidden_size": {
       "DeepNAP": [
-        "[100; 1000]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "Donut": [
-        "[100; 1000]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "HealthESN": [
-        "[100; 1000]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "OmniAnomaly": [
-        "[100; 1000]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ]
     },
     "local_outlier_threshold": [
-      "[0.1, 0.2, 0.5, 0.6, 0.7, 0.9]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "lstm_layers": {
       "DeepNAP": [
-        "[1, 3, 10]"
+        1,
+        3,
+        10
       ],
       "EncDec-AD": [
-        "[1, 3, 10]"
+        1,
+        3,
+        10
       ],
       "LSTM-AD": [
-        "[1, 3, 10]"
+        1,
+        3,
+        10
       ],
       "LSTM-VAE": [
-        "[1, 3, 10]"
+        1,
+        3,
+        10
       ]
     },
     "max_sign_change_distance": [
-      "[5, 10, 20, 30]"
+      5,
+      10,
+      20,
+      30
     ],
     "method": [
-      "[\"largest\", \"mean\", \"median\"]"
+      "largest",
+      "mean",
+      "median"
     ],
     "min_weight": [
-      "[0, 0.1, 0.2, 0.5, 0.9, 1]"
+      0,
+      0.2,
+      0.5,
+      1
     ],
     "nf_layers": [
-      "[10; 20; 50]"
+      10,
+      20,
+      50
     ],
     "nu": [
-      "[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "num": [
-      "[7, 10, 13]"
+      7,
+      10,
+      13
     ],
     "p": [
-      "[0, 0.1, 0.13, 0.2, 0.3, 0.4, 0.5]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "paa_transform_size": {
       "GrammarViz": [
-        "[3; 20]"
+        3,
+        4,
+        5
       ],
       "HOT SAX": [
-        "[3; 20]"
+        3,
+        4,
+        5
       ]
     },
     "partial_sequence_length": [
-      "[1, 2, 3, 4, 5, 10]"
+      1,
+      3,
+      5,
+      10
     ],
     "project_phasespace": [
-      "[True, False]"
+      true,
+      false
     ],
     "q": [
-      "[0.0001, 0.001, 0.01, 0.1]"
+      0.0001,
+      0.001,
+      0.01,
+      0.1
     ],
     "quantile_epsilon": [
-      "[0.001, 0.01, 0.1]"
+      0.001,
+      0.01,
+      0.1
     ],
     "radius": {
       "DBStream": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "KNN": [
-        "=+/- 30%"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ]
     },
     "rate": [
-      "[30, 50, 100]"
+      30,
+      50,
+      100
     ],
     "rnn_hidden_size": {
       "DeepNAP": [
-        "[100; 1000]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "LSTM-VAE": [
-        "[100; 1000]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "OmniAnomaly": [
-        "[100; 1000]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ]
     },
     "scaling": [
-      "[\"standard\", \"robust\"]"
+      "standard",
+      "robust"
     ],
     "seasonal": [
-      "[\"add\", \"mul\"]"
+      "add",
+      "mul"
     ],
     "shared_density": [
-      "[True, False]"
+      true,
+      false
     ],
     "sim": [
-      "[\"simo\", \"simn\"]"
+      "simo",
+      "simn"
     ],
     "smoothing_window_size": [
-      "[10, 30, 50, 100, 200, 500, 1000]"
+      10,
+      30,
+      100
     ],
     "spectral_radius": {
       "HealthESN": [
-        "[0; 10]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ],
       "Torsk": [
-        "[0; 10]"
+        "-30% default value",
+        "default value",
+        "+30% default value"
       ]
     },
     "step": [
-      "[32, 64, 128]"
+      32,
+      64,
+      128
     ],
     "teacher_epochs": [
-      "[10, 20, 50, 100]"
+      10,
+      20,
+      50,
+      100
     ],
     "threshold": [
-      "[1, 2, 3, 4, 5]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "tol": {
       "NoveltySVR": [
-        "exp [1e-4; 1]"
+        "e-2 default value",
+        "e-1 default value",
+        "default value",
+        "e+1 default value",
+        "e+2 default value"
       ],
       "PCC": [
-        "exp [1e-4; 1]"
+        "e-2 default value",
+        "e-1 default value",
+        "default value",
+        "e+1 default value",
+        "e+2 default value"
       ],
       "PhaseSpace-SVM": [
-        "exp [1e-4; 1]"
+        "e-2 default value",
+        "e-1 default value",
+        "default value",
+        "e+1 default value",
+        "e+2 default value"
       ]
     },
     "train_method": [
-      "[\"pinv_lstsq\", \"pinv_svd\", \"tikhonov\"]"
-    ],
-    "transient_window_size": [
-      "20% of train_window_size [50; 1000]"
+      "pinv_lstsq",
+      "pinv_svd",
+      "tikhonov"
     ],
     "trend": [
-      "[\"add\", \"mul\"]"
+      "add",
+      "mul"
     ],
     "use_weights": [
-      "[True, False]"
+      true,
+      false
     ],
     "wavelet_a": [
-      "[-1.75, -2.5, -3,25]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "wavelet_cs_C": [
-      "[1.225, 1.75, 2.275]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "wavelet_k": [
-      "[-1.05, -1.5, -1.95]"
+      "-30% default value",
+      "default value",
+      "+30% default value"
     ],
     "wavelet_wbf": [
-      "[\"mexican_hat\", \"central_symmetric\", \"morlet\"]"
+      "mexican_hat",
+      "central_symmetric",
+      "morlet"
     ],
     "whiten": [
-      "[True, False]"
+      true,
+      false
     ]
   },
   "shared_params": {
