feat: add parameter values for EncDec-AD - latent_size - lstm_layers

--- a/timeeval_experiments/param-config.json
+++ b/timeeval_experiments/param-config.json
@@ -67,6 +67,10 @@
       "latent_size": 6,
       "hidden_layer_shape": [100, 100],
       "dropout": 0.1
+    },
+    "EncDec-AD": {
+      "latent_size": "-30% default value",
+      "lstm_layers": 3
     }
   },
   "__heuristic_function_mapping": {
