ci: upload coverage xml to gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,10 @@ test:
   script:
     - python setup.py typecheck
     - python setup.py test
+    - coverage xml
+  artifacts:
+    reports:
+      cobertura: coverage.xml
 
 build:
   stage: build
